tests/ui/associated-consts/issue-24949-assoc-const-static-recursion-trait-default.stderr
error[E0391]: cycle detected when caching mir of `FooDefault::BAR` for CTFE
  --> $DIR/issue-24949-assoc-const-static-recursion-trait-default.rs:8:5
   |
LL |     const BAR: u32 = DEFAULT_REF_BAR;
   |     ^^^^^^^^^^^^^^
   |
note: ...which requires elaborating drops for `FooDefault::BAR`...
  --> $DIR/issue-24949-assoc-const-static-recursion-trait-default.rs:8:22
   |
LL |     const BAR: u32 = DEFAULT_REF_BAR;
   |                      ^^^^^^^^^^^^^^^
note: ...which requires simplifying constant for the type system `DEFAULT_REF_BAR`...
  --> $DIR/issue-24949-assoc-const-static-recursion-trait-default.rs:11:1
   |
LL | const DEFAULT_REF_BAR: u32 = <GlobalDefaultRef>::BAR;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `DEFAULT_REF_BAR`...
  --> $DIR/issue-24949-assoc-const-static-recursion-trait-default.rs:11:30
   |
LL | const DEFAULT_REF_BAR: u32 = <GlobalDefaultRef>::BAR;
   |                              ^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires simplifying constant for the type system `FooDefault::BAR`...
  --> $DIR/issue-24949-assoc-const-static-recursion-trait-default.rs:8:5
   |
LL |     const BAR: u32 = DEFAULT_REF_BAR;
   |     ^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `FooDefault::BAR`...
  --> $DIR/issue-24949-assoc-const-static-recursion-trait-default.rs:8:5
   |
LL |     const BAR: u32 = DEFAULT_REF_BAR;
   |     ^^^^^^^^^^^^^^
   = note: ...which again requires caching mir of `FooDefault::BAR` for CTFE, completing the cycle
note: cycle used when const-evaluating + checking `FooDefault::BAR`
  --> $DIR/issue-24949-assoc-const-static-recursion-trait-default.rs:8:5
   |
LL |     const BAR: u32 = DEFAULT_REF_BAR;
   |     ^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
